Bug 245370. Make autocomplete dropdowns accessible. r=neil, sr=alecf